--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "dist/cox.min.js",
   "module": "dist/cox.es.js",
-  "types": "type/index.d.ts",
+  "types": "dist/type/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
-    "declaration": "tsc --declaration --declarationDir type --outDir . ./src/index.ts",
+    "build": "rm -fr dist & rollup -c",
+    "declaration": "tsc --declaration --declarationDir dist --outDir type ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserslist": [
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^4.1.2",
     "rollup": "^2.15.0",
+    "rollup-plugin-terser": "^6.1.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.5"
   },
