--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@iro/cox",
   "version": "1.0.1",
-  "description": "",
+  "description": "Collision engine may evolve into physical engine.",
   "main": "dist/cox.min.js",
   "module": "dist/cox.es.js",
   "types": "dist/type/index.d.ts",
@@ -14,6 +14,10 @@
     "android >= 5",
     "ios >= 8"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JetLua/cox"
+  },
   "author": "JetLu",
   "license": "MIT",
   "devDependencies": {
