--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "types": "dist/type/index.d.ts",
   "scripts": {
     "build": "rm -fr dist & rollup -c",
-    "declaration": "tsc --declaration --declarationDir dist/type ./src/index.ts --emitDeclarationOnly",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/",
+    "declaration": "tsc --declaration --declarationDir dist/type ./src/index.ts --emitDeclarationOnly"
   },
   "browserslist": [
     "android >= 5",
@@ -22,6 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^4.1.2",
+    "expect.js": "^0.3.1",
+    "mocha": "^8.0.1",
     "rollup": "^2.15.0",
     "rollup-plugin-terser": "^6.1.0",
     "tslib": "^2.0.0",
