--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "target": "es5",
+    "strict": true,
     "lib": [
       "esnext",
       "dom"
